# SimpleSnapFS

./: CMakeLists.txt  README.md
src/config/: libconfigcpp.cc  scanner.c  wincompat.c
src/core_modules/: example.cpp
src/debug/: runtime_error.cpp  stack_frame_tracing.cpp
src/include/: block_io.h  checksum.h  debug.h  init.h  mod_types.h  module.h  module.ini  module.inl  simplesnapfs.h  utility.h
src/include/config/: libconfig.hh  parsectx.h
src/init/: init.cpp
src/modular/: module.cpp
src/modules/include/: bitmap.h  simplesnapfs.h
src/simplesnapfs/: block_io.cpp  checksum.cpp
src/tests/: config_test.cpp  example.cpp  example_config.cfg  example_mod_config.cfg  fs_debug_test.cpp  init_test.cpp  module_mgr_test.cpp
src/utils/: mkfs.simplesnapfs.cpp  utility.cpp
